--- a/styles/default.css
+++ b/styles/default.css
@@ -41,6 +41,10 @@ body {
 	color: #ccccaa;
 	font-family: Helvetica, Arial, sans-serif;
 	border:solid 1px #777777;
+	width: 100%;
+	-webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .button {
